force-app/main/default/objects/Customer__c/fields/FirstName__c.field-meta.xml
<CustomField>
	<fullName>FirstName__c</fullName>
	<label>First Name</label>
	<length>80</length>
	<type>Text</type>
</CustomField>