force-app/main/default/objects/Customer__c/fields/LastName__c.field-meta.xml
<CustomField>
	<fullName>LastName__c</fullName>
	<label>Last Name</label>
	<length>80</length>
	<type>Text</type>
</CustomField>