force-app/main/default/objects/Customer__c/fields/Phone_Normalized__c.field-meta.xml
<CustomField>
    <fullName>Phone_Normalized__c</fullName>
    <label>Phone Normalized</label>
    <length>15</length>
    <type>Text</type>
    <inlineHelpText>Digits-only version of phone for duplicate detection.</inlineHelpText>
</CustomField>