force-app/main/default/objects/Customer__c/fields/SignupDate__c.field-meta.xml
<CustomField>
	<fullName>SignupDate__c</fullName>
	<label>Signup Date</label>
	<type>Date</type>
</CustomField>